Fix: Double tapping a button on mobile doesn't make it zoom in anymore.
Added the pokemon box and a footer.

--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
   padding: 0;
 }
 
-@font-face {
-  font-family: 'Vanilla Caramel';
-  src: url("fonts/Vanilla\ Caramel.otf")
-}
-
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8)),
                     url("images/background.jpg");
@@ -15,6 +10,11 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   height: 200vh;
+}
+
+@font-face {
+  font-family: 'Vanilla Caramel';
+  src: url("fonts/Vanilla\ Caramel.otf")
 }
 
 /* Button Styles */
@@ -30,6 +30,7 @@ body {
   display: inline-block;
   font-size: 2vh;
   transition-duration: 0.4s;
+  touch-action: manipulation;
 }
 
 .button:hover {
@@ -122,7 +123,6 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 2vh;
-  margin-top: 2%;
 }
 
 #pokemon-name {
@@ -130,4 +130,34 @@ body {
   width: 35vh;
   font-size: larger;
   text-align: center;
+}
+
+/* Pokemon Box */
+#pokemon-box-div {
+  display: block;
+  height: 80vh;
+  width: 90%;
+  margin: auto;
+  margin-top: 15vh;
+  margin-bottom: 15vh;
+  position: static;
+  background-color: rgb(204, 204, 204);
+  border-width: 10px;
+  border-style:dashed;
+  border-color: #505050;
+}
+
+/* Footer */
+#footer-div {
+  display: flex;
+  width: 100%;
+  height: 10vh;
+  margin:auto;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(226, 226, 226);
+}
+
+#footer {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
